--- a/pages/memberadd.html
+++ b/pages/memberadd.html
@@ -6,9 +6,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Add Member</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src="../scripts/validation.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -35,17 +36,14 @@
                         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
     <!--This is the form-->
     <div class="container">
-        <h1>Add New Member</h1>
-        <form class="row g-3 needs-validation" novalidate>
+
+        <form id="memberaddform" class="needs-validation" novalidate>
+            <h1>Add New Member</h1>
             <!--This is a to have two fields together-->
             <div class="row">
                 <div class="col">
@@ -53,6 +51,8 @@
                     <div class="mb-3">
                         <label for="FirstName" class="form-label">Given Name</label>
                         <input type="text" class="form-control" id="FirstName" required>
+                        <div id="fnerror" class="invalid-feedback">
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -60,6 +60,8 @@
                     <div class="mb-3">
                         <label for="MiddleName" class="form-label">Middle Name</label>
                         <input type="text" class="form-control" id="MiddleName" required>
+                        <div id="mnerror" class="invalid-feedback">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -68,6 +70,8 @@
                     <div class="mb-3">
                         <label for="LastName" class="form-label">Last Name</label>
                         <input type="text" class="form-control" id="LastName" required>
+                        <div id="lnerror" class="invalid-feedback">
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -79,6 +83,9 @@
                     <div class="mb-3">
                         <label for="DOB" class="form-label">Date Of Birth</label>
                         <input type="date" class="form-control" id="DOB">
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -89,6 +96,9 @@
                 <div class="mb-3">
                     <label for="StreetAddress" class="form-label">Street Address</label>
                     <input type="text" class="form-control" id="StreetAddress" required>
+                    <div class="invalid-feedback">
+                        Please choose a username.
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -97,6 +107,9 @@
                     <div class="mb-3">
                         <label for="Suburb" class="form-label">Suburb</label>
                         <input type="text" class="form-control" id="Suburb" required>
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -104,6 +117,9 @@
                     <div class="mb-3">
                         <label for="Postcode" class="form-label">Postcode</label>
                         <input type="text" class="form-control" id="Postcode" required>
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -120,10 +136,13 @@
                         <option value="VIC">VIC</option>
                         <option value="WA">WA</option>
                     </select>
+                    <div class="invalid-feedback">
+                        Please choose a username.
+                    </div>
                 </div>
             </div>
             <!--This is a button field-->
-            <button type="submit" class="btn btn-primary">Save</button>
+            <input class="btn btn-primary" type="submit" />
         </form>
     </div>
 
