--- a/pages/memberadd.html
+++ b/pages/memberadd.html
@@ -6,9 +6,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Add Member</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src="../scripts/validation.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.2.5/dist/bootstrap-validate.js"></script>
 
 </head>
 
@@ -42,7 +43,7 @@
     <!--This is the form-->
     <div class="container">
 
-        <form id="memberaddform" class="needs-validation" novalidate>
+        <form id="memberaddform" novalidate>
             <h1>Add New Member</h1>
             <!--This is a to have two fields together-->
             <div class="row">
@@ -50,9 +51,7 @@
                     <!--This is a text field-->
                     <div class="mb-3">
                         <label for="FirstName" class="form-label">Given Name</label>
-                        <input type="text" class="form-control" id="FirstName" required>
-                        <div id="fnerror" class="invalid-feedback">
-                        </div>
+                        <input id="FirstName" type="text" class="form-control" required>
                     </div>
                 </div>
                 <div class="col">
@@ -60,8 +59,6 @@
                     <div class="mb-3">
                         <label for="MiddleName" class="form-label">Middle Name</label>
                         <input type="text" class="form-control" id="MiddleName" required>
-                        <div id="mnerror" class="invalid-feedback">
-                        </div>
                     </div>
                 </div>
             </div>
@@ -70,8 +67,6 @@
                     <div class="mb-3">
                         <label for="LastName" class="form-label">Last Name</label>
                         <input type="text" class="form-control" id="LastName" required>
-                        <div id="lnerror" class="invalid-feedback">
-                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -83,9 +78,19 @@
                     <div class="mb-3">
                         <label for="DOB" class="form-label">Date Of Birth</label>
                         <input type="date" class="form-control" id="DOB">
-                        <div class="invalid-feedback">
-                            Please choose a username.
+                        <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                            You need to be at least 18 years old
                         </div>
+                    </div>
+                </div>
+                <div class="col">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="mb-3">
+                        <label for="Email" class="form-label">Email</label>
+                        <input type="text" class="form-control" id="Email">
                     </div>
                 </div>
                 <div class="col">
@@ -96,9 +101,6 @@
                 <div class="mb-3">
                     <label for="StreetAddress" class="form-label">Street Address</label>
                     <input type="text" class="form-control" id="StreetAddress" required>
-                    <div class="invalid-feedback">
-                        Please choose a username.
-                    </div>
                 </div>
             </div>
             <div class="row">
@@ -107,9 +109,6 @@
                     <div class="mb-3">
                         <label for="Suburb" class="form-label">Suburb</label>
                         <input type="text" class="form-control" id="Suburb" required>
-                        <div class="invalid-feedback">
-                            Please choose a username.
-                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -117,9 +116,6 @@
                     <div class="mb-3">
                         <label for="Postcode" class="form-label">Postcode</label>
                         <input type="text" class="form-control" id="Postcode" required>
-                        <div class="invalid-feedback">
-                            Please choose a username.
-                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -136,17 +132,16 @@
                         <option value="VIC">VIC</option>
                         <option value="WA">WA</option>
                     </select>
-                    <div class="invalid-feedback">
-                        Please choose a username.
-                    </div>
                 </div>
             </div>
+            <div id="noteError" hidden>Fields in red need to be filled</div>
             <!--This is a button field-->
-            <input class="btn btn-primary" type="submit" />
+            <button class="btn btn-primary" type="submit">Save</button>
         </form>
     </div>
 
     <footer></footer>
 </body>
+<script src="../scripts/validation.js"></script>
 
 </html>
