--- a/pages/memberadd.html
+++ b/pages/memberadd.html
@@ -122,7 +122,7 @@
                     <!--This is a text field-->
                     <label for="State" class="form-label">State</label>
                     <select class="form-select" aria-label="Default select example" id="State" required>
-                        <option selected>Select a State</option>
+                        <option value="0" selected>Select a State</option>
                         <option value="ACT">ACT</option>
                         <option value="NSW">NSW</option>
                         <option value="NT">NT</option>
@@ -134,7 +134,10 @@
                     </select>
                 </div>
             </div>
-            <div id="noteError" hidden>Fields in red need to be filled</div>
+            <div class="row" id="noteError" hidden>
+                <div class="col">Fields in red need to be filled
+                </div>
+            </div>
             <!--This is a button field-->
             <button class="btn btn-primary" type="submit">Save</button>
         </form>
