--- a/pages/staffadd.html
+++ b/pages/staffadd.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Add Member</title>
+    <title>Add Staff</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -25,7 +25,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Member
+                            Staff Member
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Add New Member</a></li>
@@ -47,7 +47,7 @@
     </nav>
     <!--This is the form-->
     <div class="container">
-        <h1>Add New Member</h1>
+        <h1>Add New Staff Member</h1>
         <form>
             <!--This is a to have two fields together-->
             <div class="row">
@@ -61,19 +61,9 @@
                 <div class="col">
                     <!--This is a text field-->
                     <div class="mb-3">
-                        <label for="MiddleName" class="form-label">Middle Name</label>
-                        <input type="text" class="form-control" id="MiddleName">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="mb-3">
                         <label for="LastName" class="form-label">Last Name</label>
                         <input type="text" class="form-control" id="LastName">
                     </div>
-                </div>
-                <div class="col">
                 </div>
             </div>
             <div class="row">
@@ -88,10 +78,23 @@
                 </div>
             </div>
             <div class="row">
-                <!--This is a date field-->
-                <div class="mb-3">
-                    <label for="StreetAddress" class="form-label">Street Address</label>
-                    <input type="text" class="form-control" id="StreetAddress">
+                <div class="col">
+                    <div class="mb-3">
+                        <label for="Email" class="form-label">Email</label>
+                        <input type="text" class="form-control" id="Email">
+                    </div>
+                </div>
+                <div class="col">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="mb-3">
+                        <label for="Address" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="Address">
+                    </div>
+                </div>
+                <div class="col">
                 </div>
             </div>
             <div class="row">
@@ -125,9 +128,28 @@
                     </select>
                 </div>
             </div>
-
-            <!--This is a button field-->
-            <button type="submit" class="btn btn-primary">Save</button>
+            <div class="row">
+                <div class="col">
+                <label for="Role" class="form-label">Role</label>
+                    <select class="form-select" aria-label="Default select example" id="Role">
+                        <option selected>Select a Role</option>
+                        <option value="Admin">Admin</option>
+                        <option value="Staff">Staff</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <!--This is a text field-->
+                    <div class="mb-3">
+                        <label for="Password" class="form-label">Password</label>
+                        <input type="text" class="form-control" id="Password">
+                    </div>
+                </div>
+           <div class="row">
+            <div class="col-auto">
+                <!--This is a button field-->
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+            </div>
         </form>
     </div>
 
